[gd_scene load_steps=3 format=3 uid="uid://bod3w6keiwlf8"]

[ext_resource type="Script" path="res://scripts/battle/hand_manager.gd" id="1_ftbda"]
[ext_resource type="PackedScene" uid="uid://b0mytop1ci1gd" path="res://scenes/ui/card.tscn" id="2_wb3cc"]

[node name="HandManager" type="Node2D"]
script = ExtResource("1_ftbda")
card_scene = ExtResource("2_wb3cc")

[node name="CombinationPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ResultPreview" type="Label" parent="CombinationPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="CombineButton" type="Button" parent="CombinationPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="CancelButton" type="Button" parent="CombinationPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="EnergyLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="CombinationPanel/CombineButton" to="." method="_on_combine_button_pressed"]
[connection signal="pressed" from="CombinationPanel/CancelButton" to="." method="_on_cancel_button_pressed"]
